objects/sumoapp__Category__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__ApiName__c</fullName>
        <label>Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <defaultValue>&quot;#5679C0&quot;</defaultValue>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__MemberType__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USERS</fullName>
                    <label>Users</label>
                </value>
                <value>
                    <fullName>GROUPS</fullName>
                    <label>Groups</label>
                </value>
                <value>
                    <fullName>PROFILES</fullName>
                    <label>Profiles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__NumOfUsers__c</fullName>
        <label>Number of Users</label>
        <summaryForeignKey>sumoapp__CategoryMember__c.sumoapp__Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>SUMO Category</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>